Opened 14 years ago

Closed 14 years ago

#6842 closed bug (fixed)

[ShowImage] crashes in ImageCache::_NotifyListeners ()

Reported by: diver Owned by: leavengood
Priority: normal Milestone: R1
Component: Applications/ShowImage Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev39530, gcc4h.
Trying to open /system/documentation/diskusage/*.png crashes ShowImage

Thread 759 caused an exception: Segment violation
[...]
[Switching to team /boot/system/apps/ShowImage (750) thread image loader (759)]
0x002161a5 in ImageCache::_NotifyListeners ()
(gdb) bt
#0  0x002161a5 in ImageCache::_NotifyListeners ()
#1  0x0021740e in ImageCache::_QueueWorkerThread ()
#2  0x00765a54 in thread_entry () from /boot/system/lib/libroot.so
#3  0x700c1fec in ?? ()
(gdb)

Change History (2)

comment:1 by Ka, 14 years ago

Problem still exists in hrev39605 gcc4hybrid (not in the gcc2 version). This bug is related to #6775, so perhabs it is better to discuss this there.

comment:2 by mmadia, 14 years ago

Resolution: fixed
Status: newclosed

Fixed by phoudoin in hrev40692.

Note: See TracTickets for help on using tickets.