Fix ShowImage crash when image loading fail: we don't have a CacheEntry then, but still should notify our listener (of the error, in such case). Closes #6842.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40692 a95241bf-73f2-0310-859d-f6bbb57e9c96